--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ body {
 }
 
 .top-notch {
+  position: relative;
+  z-index: 99;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -342,7 +344,7 @@ body {
 
 .notification {
   width: 100%;
-  height: 380px;
+  height: 320px;
   border-radius: 20px;
   margin-top: 20px;
 
